--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "3s#W1Df$0Hk%",
     "database": "bradley_wedding_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
