--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Shalyn112!",
+    "password": "3s#W1Df$0Hk%",
     "database": "wedding_planner_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
