--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.1",
     "mysql2": "^1.7.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
