--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
     "development": {
-        "username": "root",
-        "password": "Shalyn112!",
-         "database": "wedding_planner_db",
-        "host": "127.0.0.1",
+        "username": "y7cpbfckc0k65xnk",
+        "password": "iyaz0eoibvxzzmf0",
+        "database": "ufwvfqgciiyivwh4",
+        "host": "cis9cbtgerlk68wl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "dialect": "mysql"
     },
     "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
+        "username": "y7cpbfckc0k65xnk",
+        "password": "iyaz0eoibvxzzmf0",
+        "database": "ufwvfqgciiyivwh4",
+        "host": "cis9cbtgerlk68wl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "dialect": "mysql"
     },
     "production": {
